# NuclearReactor

./: .gitignore  CppTest.gd  CppTest.tscn  CppTest.tscn.depren  Game.gd  Game.tscn  GameCpp.gd  GameCpp.tscn  README.md  Util.gd  export_presets.cfg  geiger_counter.ogg.import  nuclearPhysics.gdnlib  project.godot
.import/: graph-plot-white.png-ef78cc98ce713f21203bfc505e3f2f9e.md5  graph-plot-white.png-ef78cc98ce713f21203bfc505e3f2f9e.stex  icon.png-62cd613ed5c5e4afdbdbe263ec94959b.md5  icon.png-62cd613ed5c5e4afdbdbe263ec94959b.stex  icon.png-fc8b2bce8d95c6c7c17f86b90e124dbd.md5  icon.png-fc8b2bce8d95c6c7c17f86b90e124dbd.stex  left_hand_model.glb-0a7976d29b950727e5aeb313e66702cf.md5  left_hand_model.glb-0a7976d29b950727e5aeb313e66702cf.scn  nuclear_control_panel_v0.glb-391506e912e833aa5c8a66498fad0d75.md5  nuclear_control_panel_v0.glb-391506e912e833aa5c8a66498fad0d75.scn  right_hand_model.glb-5462a0aefd8dcabe7f35f5f18c012b18.md5  right_hand_model.glb-5462a0aefd8dcabe7f35f5f18c012b18.scn  sarabun-new-preview.png-f63a2a38adbf72fc8f39aa575477a5b3.md5  sarabun-new-preview.png-f63a2a38adbf72fc8f39aa575477a5b3.stex  thread.png-a8c2a33aab16e470fb95550c56d782fe.md5  thread.png-a8c2a33aab16e470fb95550c56d782fe.stex
OQ_Toolkit/OQ_ARVRController/models3d/: OculusQuestHandTexture_Color.webp.import
actors/: DiffusingHeatMap.gdns  HeatMap.gdns  Thermocouple.gdns
actors/2d_control_panel/: 2dControlPanel.gd  2dControlPanel.tscn  ControlRodPanel.gd  ControlRodPanel.tscn  IndicatorLight.gd  IndicatorLight.tscn  momentary_button.gd
actors/3d_control_panel/: 3dControlPanel.gd  3dControlPanel.tscn  ControlRodPanel.gd  ControlRodPanel.tscn  IndicatorLight.gd  IndicatorLight.tscn  dark_gray_metal.tres
actors/billtest/: clicky.gd  clicky.tscn
actors/control_rod/: ControlRod.gd  ControlRod.tscn  ControlRodCpp.gdns
actors/control_system/: ControlSystem.gd
actors/fluid/: CoolantPipe.gd  FluidTest.gd  FluidTest.tscn  HeatSink.gd  PipeCombiner.gd  PipeSplit.gd  PressureSensor.gd
actors/fuel_rod/: FuelRod.gd  FuelRod.tscn  FuelRodcpp.gdns
actors/moderator/: Moderator.gd  Moderator.gdns  Moderator.tscn
actors/momentary_vr_button/: MomentaryVrButton.gd  MomentaryVrButton.tscn
actors/neutron/: Neutron.gd  Neutron.tscn  NeutronField.gd  NeutronField.gdns  NeutronField.tscn
actors/neutron_field/: NeutronField.tscn
actors/reactor/: Reactor.gd  Reactor.tscn  ReactorCoreCpp.gdns
actors/real_time_graph/: RealTimeGraph.gd  RealTimeGraph.tscn
addons/nuclear_reactor/: node.png.import  plugin.cfg  plugin.gd
common_assets/: DefaultFont.tres
cpp/: .gitignore  CMakeLists.txt  SConstruct  build-all.bat  make-android.bat  make-android.sh
cpp/jni/: Android.mk
cpp/src/: init.cpp
cpp/src/actors/: ControlRod.cpp  ControlRod.h  DiffusingHeatMap.cpp  DiffusingHeatMap.h  FuelRod.cpp  FuelRod.h  HeatMap.cpp  HeatMap.h  Moderator.cpp  Moderator.h  Neutron.cpp  Neutron.h  NeutronField.cpp  NeutronField.h  NeutronRegion.cpp  NeutronRegion.h  ReactorCore.cpp  ReactorCore.h
cpp/src/actors/HeatMap/: DiffusingHeatMap.cpp  DiffusingHeatMap.h  HeatMap.cpp  HeatMap.h
cpp/src/actors/NeutronField/: BatchResult.cpp  BatchResult.h  BspRegion1dNode.cpp  BspRegion1dNode.h  Neutron.cpp  Neutron.h  NeutronField.cpp  NeutronField.h
cpp/src/actors/NeutronField/BspTree/: BspTree.cpp  BspTree.h  BspTreeNode.cpp  BspTreeNode.h
cpp/src/actors/NeutronRegion/: NeutronRegion.cpp  NeutronRegion.h
cpp/src/actors/NeutronRegion/ControlRod/: ControlRod.cpp  ControlRod.h
cpp/src/actors/NeutronRegion/FuelRod/: FuelRod.cpp  FuelRod.h
cpp/src/actors/NeutronRegion/Moderator/: Moderator.cpp  Moderator.h
cpp/src/actors/NeutronRegion/ReactorCore/: ReactorCore.cpp  ReactorCore.h
cpp/src/actors/Sensors/Thermocouple/: Thermocouple.cpp  Thermocouple.h
cpp/src/math/: AABB2d.cpp  AABB2d.h  Area2d.cpp  Area2d.h
cpp/src/util/: ThreadPool.h  Utils.cpp  Utils.h
entry/: Entry.gd
entry/2d/: Game2d.tscn  GameCpp.gd  GameCpp.tscn
entry/3d/: BaseGame3d.tscn
entry/3d/assets/: geiger_counter.ogg.import
entry/3d/assets/control_room/: control_room_00.map  (+1 more)
entry/3d/flat/: Game3d.gd  Game3d.tscn
simulation/: Simulation.gd  Simulation.tscn
textures/base/: floor_tile_00.jpg.import  floor_tile_01.jpg.import  floor_tile_02.jpg.import  wall_00.jpg.import  wall_01.jpg.import  wall_02.jpg.import
vr/: DefaultFont.tres  Material_001.material  Reactor_room_v2.glb  VrGame.gd  VrGame.tscn  nuclear_control_panel_v0.glb.import  vr_button_pressed.tres  vr_button_released.tres
vr/art/: Material.material  Material_001.material  Reactor_room_only.glb  Reactor_room_only.glb.import  middle_console_02.glb  middle_console_02.glb.import  nuclear_control_panel_v0.glb  nuclear_control_panel_v0.glb.import  reactor_room_console_large.glb  reactor_room_console_large.glb.import  reactor_room_console_only.glb  reactor_room_console_only.glb.import  reactor_room_console_only.scn
vr/art/buttons_knobs/: Material_001.material  turn_knob.glb  turn_knob.glb.import
vr/art/console/: Material_000.material  Material_001.material  Material_008.material  Material_010.material  reactor_console.glb  reactor_console.glb.import
vr/art/control_room/: control_room_00.map  control_room_00.map.import
vr/art/lights/: Material_001.material  indicator_light_bright_red.glb  indicator_light_bright_red.glb.import  indicator_light_dark_red.glb  indicator_light_dark_red.glb.import
vr/art/middle_console/: middle_console_03.blend  middle_console_03.glb  middle_console_03.glb.import  middle_console_04.glb  middle_console_04.glb.import  middle_console_04_new_rivets.glb.import  middle_console_05.glb  middle_console_05.glb.import  painted_metal.material
vr/art/room/: Material.material  Material_000.material  Material_001.material  Material_003.material  Material_004.material  Material_005.material  Material_006.material  Reactor_room.glb  Reactor_room.glb.import  Reactor_room_v2.glb.import  TilesOnyxOpaloBlack001_GLOSS_2K.jpg.import
vr/art/wall_console/: painted_metal.material  wall_console_01.glb  wall_console_01.glb.import
vr/vr_player/: OqVrPlayer.tscn
(+10 files in other folders)
