cmake_minimum_required(VERSION 3.15)
project(cpp)

set(CMAKE_CXX_STANDARD 17)

include_directories(godot-cpp)
include_directories(godot-cpp/godot_headers)
include_directories(godot-cpp/godot_headers/android)
include_directories(godot-cpp/godot_headers/arvr)
include_directories(godot-cpp/godot_headers/gdnative)
include_directories(godot-cpp/godot_headers/nativescript)
include_directories(godot-cpp/godot_headers/net)
include_directories(godot-cpp/godot_headers/pluginscript)
include_directories(godot-cpp/godot_headers/videodecoder)
include_directories(godot-cpp/include)
include_directories(godot-cpp/include/core)
include_directories(godot-cpp/include/gen)
include_directories(src/actors)
include_directories(src/util)

add_executable(cpp
        godot-cpp/godot_headers/android/godot_android.h
        godot-cpp/godot_headers/arvr/godot_arvr.h
        godot-cpp/godot_headers/gdnative/aabb.h
        godot-cpp/godot_headers/gdnative/array.h
        godot-cpp/godot_headers/gdnative/basis.h
        godot-cpp/godot_headers/gdnative/color.h
        godot-cpp/godot_headers/gdnative/dictionary.h
        godot-cpp/godot_headers/gdnative/gdnative.h
        godot-cpp/godot_headers/gdnative/node_path.h
        godot-cpp/godot_headers/gdnative/plane.h
        godot-cpp/godot_headers/gdnative/pool_arrays.h
        godot-cpp/godot_headers/gdnative/quat.h
        godot-cpp/godot_headers/gdnative/rect2.h
        godot-cpp/godot_headers/gdnative/rid.h
        godot-cpp/godot_headers/gdnative/string.h
        godot-cpp/godot_headers/gdnative/string_name.h
        godot-cpp/godot_headers/gdnative/transform.h
        godot-cpp/godot_headers/gdnative/transform2d.h
        godot-cpp/godot_headers/gdnative/variant.h
        godot-cpp/godot_headers/gdnative/vector2.h
        godot-cpp/godot_headers/gdnative/vector3.h
        godot-cpp/godot_headers/nativescript/godot_nativescript.h
        godot-cpp/godot_headers/net/godot_net.h
        godot-cpp/godot_headers/net/godot_webrtc.h
        godot-cpp/godot_headers/pluginscript/godot_pluginscript.h
        godot-cpp/godot_headers/videodecoder/godot_videodecoder.h
        godot-cpp/godot_headers/gdnative_api_struct.gen.h
        godot-cpp/include/core/AABB.hpp
        godot-cpp/include/core/Array.hpp
        godot-cpp/include/core/Basis.hpp
        godot-cpp/include/core/Color.hpp
        godot-cpp/include/core/CoreTypes.hpp
        godot-cpp/include/core/Defs.hpp
        godot-cpp/include/core/Dictionary.hpp
        godot-cpp/include/core/Godot.hpp
        godot-cpp/include/core/GodotGlobal.hpp
        godot-cpp/include/core/GodotProfiling.hpp
        godot-cpp/include/core/NodePath.hpp
        godot-cpp/include/core/Plane.hpp
        godot-cpp/include/core/PoolArrays.hpp
        godot-cpp/include/core/Quat.hpp
        godot-cpp/include/core/Rect2.hpp
        godot-cpp/include/core/Ref.hpp
        godot-cpp/include/core/RID.hpp
        godot-cpp/include/core/String.hpp
        godot-cpp/include/core/TagDB.hpp
        godot-cpp/include/core/Transform.hpp
        godot-cpp/include/core/Transform2D.hpp
        godot-cpp/include/core/Variant.hpp
        godot-cpp/include/core/Vector2.hpp
        godot-cpp/include/core/Vector3.hpp
        godot-cpp/include/core/Wrapped.hpp
        godot-cpp/include/gen/__icalls.hpp
        godot-cpp/include/gen/AcceptDialog.hpp
        godot-cpp/include/gen/AnimatedSprite.hpp
        godot-cpp/include/gen/AnimatedSprite3D.hpp
        godot-cpp/include/gen/AnimatedTexture.hpp
        godot-cpp/include/gen/Animation.hpp
        godot-cpp/include/gen/AnimationNode.hpp
        godot-cpp/include/gen/AnimationNodeAdd2.hpp
        godot-cpp/include/gen/AnimationNodeAdd3.hpp
        godot-cpp/include/gen/AnimationNodeAnimation.hpp
        godot-cpp/include/gen/AnimationNodeBlend2.hpp
        godot-cpp/include/gen/AnimationNodeBlend3.hpp
        godot-cpp/include/gen/AnimationNodeBlendSpace1D.hpp
        godot-cpp/include/gen/AnimationNodeBlendSpace2D.hpp
        godot-cpp/include/gen/AnimationNodeBlendTree.hpp
        godot-cpp/include/gen/AnimationNodeOneShot.hpp
        godot-cpp/include/gen/AnimationNodeOutput.hpp
        godot-cpp/include/gen/AnimationNodeStateMachine.hpp
        godot-cpp/include/gen/AnimationNodeStateMachinePlayback.hpp
        godot-cpp/include/gen/AnimationNodeStateMachineTransition.hpp
        godot-cpp/include/gen/AnimationNodeTimeScale.hpp
        godot-cpp/include/gen/AnimationNodeTimeSeek.hpp
        godot-cpp/include/gen/AnimationNodeTransition.hpp
        godot-cpp/include/gen/AnimationPlayer.hpp
        godot-cpp/include/gen/AnimationRootNode.hpp
        godot-cpp/include/gen/AnimationTrackEditPlugin.hpp
        godot-cpp/include/gen/AnimationTree.hpp
        godot-cpp/include/gen/AnimationTreePlayer.hpp
        godot-cpp/include/gen/Area.hpp
        godot-cpp/include/gen/Area2D.hpp
        godot-cpp/include/gen/ArrayMesh.hpp
        godot-cpp/include/gen/ARVRAnchor.hpp
        godot-cpp/include/gen/ARVRCamera.hpp
        godot-cpp/include/gen/ARVRController.hpp
        godot-cpp/include/gen/ARVRInterface.hpp
        godot-cpp/include/gen/ARVRInterfaceGDNative.hpp
        godot-cpp/include/gen/ARVROrigin.hpp
        godot-cpp/include/gen/ARVRPositionalTracker.hpp
        godot-cpp/include/gen/ARVRServer.hpp
        godot-cpp/include/gen/AStar.hpp
        godot-cpp/include/gen/AStar2D.hpp
        godot-cpp/include/gen/AtlasTexture.hpp
        godot-cpp/include/gen/AudioBusLayout.hpp
        godot-cpp/include/gen/AudioEffect.hpp
        godot-cpp/include/gen/AudioEffectAmplify.hpp
        godot-cpp/include/gen/AudioEffectBandLimitFilter.hpp
        godot-cpp/include/gen/AudioEffectBandPassFilter.hpp
        godot-cpp/include/gen/AudioEffectChorus.hpp
        godot-cpp/include/gen/AudioEffectCompressor.hpp
        godot-cpp/include/gen/AudioEffectDelay.hpp
        godot-cpp/include/gen/AudioEffectDistortion.hpp
        godot-cpp/include/gen/AudioEffectEQ.hpp
        godot-cpp/include/gen/AudioEffectEQ10.hpp
        godot-cpp/include/gen/AudioEffectEQ21.hpp
        godot-cpp/include/gen/AudioEffectEQ6.hpp
        godot-cpp/include/gen/AudioEffectFilter.hpp
        godot-cpp/include/gen/AudioEffectHighPassFilter.hpp
        godot-cpp/include/gen/AudioEffectHighShelfFilter.hpp
        godot-cpp/include/gen/AudioEffectInstance.hpp
        godot-cpp/include/gen/AudioEffectLimiter.hpp
        godot-cpp/include/gen/AudioEffectLowPassFilter.hpp
        godot-cpp/include/gen/AudioEffectLowShelfFilter.hpp
        godot-cpp/include/gen/AudioEffectNotchFilter.hpp
        godot-cpp/include/gen/AudioEffectPanner.hpp
        godot-cpp/include/gen/AudioEffectPhaser.hpp
        godot-cpp/include/gen/AudioEffectPitchShift.hpp
        godot-cpp/include/gen/AudioEffectRecord.hpp
        godot-cpp/include/gen/AudioEffectReverb.hpp
        godot-cpp/include/gen/AudioEffectSpectrumAnalyzer.hpp
        godot-cpp/include/gen/AudioEffectSpectrumAnalyzerInstance.hpp
        godot-cpp/include/gen/AudioEffectStereoEnhance.hpp
        godot-cpp/include/gen/AudioServer.hpp
        godot-cpp/include/gen/AudioStream.hpp
        godot-cpp/include/gen/AudioStreamGenerator.hpp
        godot-cpp/include/gen/AudioStreamGeneratorPlayback.hpp
        godot-cpp/include/gen/AudioStreamMicrophone.hpp
        godot-cpp/include/gen/AudioStreamOGGVorbis.hpp
        godot-cpp/include/gen/AudioStreamPlayback.hpp
        godot-cpp/include/gen/AudioStreamPlaybackResampled.hpp
        godot-cpp/include/gen/AudioStreamPlayer.hpp
        godot-cpp/include/gen/AudioStreamPlayer2D.hpp
        godot-cpp/include/gen/AudioStreamPlayer3D.hpp
        godot-cpp/include/gen/AudioStreamRandomPitch.hpp
        godot-cpp/include/gen/AudioStreamSample.hpp
        godot-cpp/include/gen/BackBufferCopy.hpp
        godot-cpp/include/gen/BakedLightmap.hpp
        godot-cpp/include/gen/BakedLightmapData.hpp
        godot-cpp/include/gen/BaseButton.hpp
        godot-cpp/include/gen/BitMap.hpp
        godot-cpp/include/gen/BitmapFont.hpp
        godot-cpp/include/gen/Bone2D.hpp
        godot-cpp/include/gen/BoneAttachment.hpp
        godot-cpp/include/gen/BoxContainer.hpp
        godot-cpp/include/gen/BoxShape.hpp
        godot-cpp/include/gen/BulletPhysicsDirectBodyState.hpp
        godot-cpp/include/gen/BulletPhysicsServer.hpp
        godot-cpp/include/gen/Button.hpp
        godot-cpp/include/gen/ButtonGroup.hpp
        godot-cpp/include/gen/Camera.hpp
        godot-cpp/include/gen/Camera2D.hpp
        godot-cpp/include/gen/CameraFeed.hpp
        godot-cpp/include/gen/CameraServer.hpp
        godot-cpp/include/gen/CameraTexture.hpp
        godot-cpp/include/gen/CanvasItem.hpp
        godot-cpp/include/gen/CanvasItemMaterial.hpp
        godot-cpp/include/gen/CanvasLayer.hpp
        godot-cpp/include/gen/CanvasModulate.hpp
        godot-cpp/include/gen/CapsuleMesh.hpp
        godot-cpp/include/gen/CapsuleShape.hpp
        godot-cpp/include/gen/CapsuleShape2D.hpp
        godot-cpp/include/gen/CenterContainer.hpp
        godot-cpp/include/gen/CharFXTransform.hpp
        godot-cpp/include/gen/CheckBox.hpp
        godot-cpp/include/gen/CheckButton.hpp
        godot-cpp/include/gen/CircleShape2D.hpp
        godot-cpp/include/gen/ClassDB.hpp
        godot-cpp/include/gen/ClippedCamera.hpp
        godot-cpp/include/gen/CollisionObject.hpp
        godot-cpp/include/gen/CollisionObject2D.hpp
        godot-cpp/include/gen/CollisionPolygon.hpp
        godot-cpp/include/gen/CollisionPolygon2D.hpp
        godot-cpp/include/gen/CollisionShape.hpp
        godot-cpp/include/gen/CollisionShape2D.hpp
        godot-cpp/include/gen/ColorPicker.hpp
        godot-cpp/include/gen/ColorPickerButton.hpp
        godot-cpp/include/gen/ColorRect.hpp
        godot-cpp/include/gen/ConcavePolygonShape.hpp
        godot-cpp/include/gen/ConcavePolygonShape2D.hpp
        godot-cpp/include/gen/ConeTwistJoint.hpp
        godot-cpp/include/gen/ConfigFile.hpp
        godot-cpp/include/gen/ConfirmationDialog.hpp
        godot-cpp/include/gen/Container.hpp
        godot-cpp/include/gen/Control.hpp
        godot-cpp/include/gen/ConvexPolygonShape.hpp
        godot-cpp/include/gen/ConvexPolygonShape2D.hpp
        godot-cpp/include/gen/CPUParticles.hpp
        godot-cpp/include/gen/CPUParticles2D.hpp
        godot-cpp/include/gen/Crypto.hpp
        godot-cpp/include/gen/CryptoKey.hpp
        godot-cpp/include/gen/CSGBox.hpp
        godot-cpp/include/gen/CSGCombiner.hpp
        godot-cpp/include/gen/CSGCylinder.hpp
        godot-cpp/include/gen/CSGMesh.hpp
        godot-cpp/include/gen/CSGPolygon.hpp
        godot-cpp/include/gen/CSGPrimitive.hpp
        godot-cpp/include/gen/CSGShape.hpp
        godot-cpp/include/gen/CSGSphere.hpp
        godot-cpp/include/gen/CSGTorus.hpp
        godot-cpp/include/gen/CubeMap.hpp
        godot-cpp/include/gen/CubeMesh.hpp
        godot-cpp/include/gen/Curve.hpp
        godot-cpp/include/gen/Curve2D.hpp
        godot-cpp/include/gen/Curve3D.hpp
        godot-cpp/include/gen/CurveTexture.hpp
        godot-cpp/include/gen/CylinderMesh.hpp
        godot-cpp/include/gen/CylinderShape.hpp
        godot-cpp/include/gen/DampedSpringJoint2D.hpp
        godot-cpp/include/gen/DirectionalLight.hpp
        godot-cpp/include/gen/Directory.hpp
        godot-cpp/include/gen/DynamicFont.hpp
        godot-cpp/include/gen/DynamicFontData.hpp
        godot-cpp/include/gen/EditorExportPlugin.hpp
        godot-cpp/include/gen/EditorFeatureProfile.hpp
        godot-cpp/include/gen/EditorFileDialog.hpp
        godot-cpp/include/gen/EditorFileSystem.hpp
        godot-cpp/include/gen/EditorFileSystemDirectory.hpp
        godot-cpp/include/gen/EditorImportPlugin.hpp
        godot-cpp/include/gen/EditorInspector.hpp
        godot-cpp/include/gen/EditorInspectorPlugin.hpp
        godot-cpp/include/gen/EditorInterface.hpp
        godot-cpp/include/gen/EditorNavigationMeshGenerator.hpp
        godot-cpp/include/gen/EditorPlugin.hpp
        godot-cpp/include/gen/EditorProperty.hpp
        godot-cpp/include/gen/EditorResourceConversionPlugin.hpp
        godot-cpp/include/gen/EditorResourcePreview.hpp
        godot-cpp/include/gen/EditorResourcePreviewGenerator.hpp
        godot-cpp/include/gen/EditorSceneImporter.hpp
        godot-cpp/include/gen/EditorSceneImporterAssimp.hpp
        godot-cpp/include/gen/EditorScenePostImport.hpp
        godot-cpp/include/gen/EditorScript.hpp
        godot-cpp/include/gen/EditorSelection.hpp
        godot-cpp/include/gen/EditorSettings.hpp
        godot-cpp/include/gen/EditorSpatialGizmo.hpp
        godot-cpp/include/gen/EditorSpatialGizmoPlugin.hpp
        godot-cpp/include/gen/EditorSpinSlider.hpp
        godot-cpp/include/gen/EditorVCSInterface.hpp
        godot-cpp/include/gen/EncodedObjectAsID.hpp
        godot-cpp/include/gen/Engine.hpp
        godot-cpp/include/gen/Environment.hpp
        godot-cpp/include/gen/Expression.hpp
        godot-cpp/include/gen/File.hpp
        godot-cpp/include/gen/FileDialog.hpp
        godot-cpp/include/gen/Font.hpp
        godot-cpp/include/gen/FuncRef.hpp
        godot-cpp/include/gen/GDNative.hpp
        godot-cpp/include/gen/GDNativeLibrary.hpp
        godot-cpp/include/gen/GDScript.hpp
        godot-cpp/include/gen/GDScriptFunctionState.hpp
        godot-cpp/include/gen/Generic6DOFJoint.hpp
        godot-cpp/include/gen/Geometry.hpp
        godot-cpp/include/gen/GeometryInstance.hpp
        godot-cpp/include/gen/GIProbe.hpp
        godot-cpp/include/gen/GIProbeData.hpp
        godot-cpp/include/gen/GlobalConstants.hpp
        godot-cpp/include/gen/Gradient.hpp
        godot-cpp/include/gen/GradientTexture.hpp
        godot-cpp/include/gen/GraphEdit.hpp
        godot-cpp/include/gen/GraphNode.hpp
        godot-cpp/include/gen/GridContainer.hpp
        godot-cpp/include/gen/GridMap.hpp
        godot-cpp/include/gen/GrooveJoint2D.hpp
        godot-cpp/include/gen/HashingContext.hpp
        godot-cpp/include/gen/HBoxContainer.hpp
        godot-cpp/include/gen/HeightMapShape.hpp
        godot-cpp/include/gen/HingeJoint.hpp
        godot-cpp/include/gen/HScrollBar.hpp
        godot-cpp/include/gen/HSeparator.hpp
        godot-cpp/include/gen/HSlider.hpp
        godot-cpp/include/gen/HSplitContainer.hpp
        godot-cpp/include/gen/HTTPClient.hpp
        godot-cpp/include/gen/HTTPRequest.hpp
        godot-cpp/include/gen/Image.hpp
        godot-cpp/include/gen/ImageTexture.hpp
        godot-cpp/include/gen/ImmediateGeometry.hpp
        godot-cpp/include/gen/Input.hpp
        godot-cpp/include/gen/InputDefault.hpp
        godot-cpp/include/gen/InputEvent.hpp
        godot-cpp/include/gen/InputEventAction.hpp
        godot-cpp/include/gen/InputEventGesture.hpp
        godot-cpp/include/gen/InputEventJoypadButton.hpp
        godot-cpp/include/gen/InputEventJoypadMotion.hpp
        godot-cpp/include/gen/InputEventKey.hpp
        godot-cpp/include/gen/InputEventMagnifyGesture.hpp
        godot-cpp/include/gen/InputEventMIDI.hpp
        godot-cpp/include/gen/InputEventMouse.hpp
        godot-cpp/include/gen/InputEventMouseButton.hpp
        godot-cpp/include/gen/InputEventMouseMotion.hpp
        godot-cpp/include/gen/InputEventPanGesture.hpp
        godot-cpp/include/gen/InputEventScreenDrag.hpp
        godot-cpp/include/gen/InputEventScreenTouch.hpp
        godot-cpp/include/gen/InputEventWithModifiers.hpp
        godot-cpp/include/gen/InputMap.hpp
        godot-cpp/include/gen/InstancePlaceholder.hpp
        godot-cpp/include/gen/InterpolatedCamera.hpp
        godot-cpp/include/gen/IP.hpp
        godot-cpp/include/gen/IP_Unix.hpp
        godot-cpp/include/gen/ItemList.hpp
        godot-cpp/include/gen/JavaClass.hpp
        godot-cpp/include/gen/JavaClassWrapper.hpp
        godot-cpp/include/gen/JavaScript.hpp
        godot-cpp/include/gen/Joint.hpp
        godot-cpp/include/gen/Joint2D.hpp
        godot-cpp/include/gen/JSON.hpp
        godot-cpp/include/gen/JSONParseResult.hpp
        godot-cpp/include/gen/JSONRPC.hpp
        godot-cpp/include/gen/KinematicBody.hpp
        godot-cpp/include/gen/KinematicBody2D.hpp
        godot-cpp/include/gen/KinematicCollision.hpp
        godot-cpp/include/gen/KinematicCollision2D.hpp
        godot-cpp/include/gen/Label.hpp
        godot-cpp/include/gen/LargeTexture.hpp
        godot-cpp/include/gen/Light.hpp
        godot-cpp/include/gen/Light2D.hpp
        godot-cpp/include/gen/LightOccluder2D.hpp
        godot-cpp/include/gen/Line2D.hpp
        godot-cpp/include/gen/LineEdit.hpp
        godot-cpp/include/gen/LineShape2D.hpp
        godot-cpp/include/gen/LinkButton.hpp
        godot-cpp/include/gen/Listener.hpp
        godot-cpp/include/gen/MainLoop.hpp
        godot-cpp/include/gen/MarginContainer.hpp
        godot-cpp/include/gen/Marshalls.hpp
        godot-cpp/include/gen/Material.hpp
        godot-cpp/include/gen/MenuButton.hpp
        godot-cpp/include/gen/Mesh.hpp
        godot-cpp/include/gen/MeshDataTool.hpp
        godot-cpp/include/gen/MeshInstance.hpp
        godot-cpp/include/gen/MeshInstance2D.hpp
        godot-cpp/include/gen/MeshLibrary.hpp
        godot-cpp/include/gen/MeshTexture.hpp
        godot-cpp/include/gen/MobileVRInterface.hpp
        godot-cpp/include/gen/MultiMesh.hpp
        godot-cpp/include/gen/MultiMeshInstance.hpp
        godot-cpp/include/gen/MultiMeshInstance2D.hpp
        godot-cpp/include/gen/MultiplayerAPI.hpp
        godot-cpp/include/gen/MultiplayerPeerGDNative.hpp
        godot-cpp/include/gen/Mutex.hpp
        godot-cpp/include/gen/NativeScript.hpp
        godot-cpp/include/gen/Navigation.hpp
        godot-cpp/include/gen/Navigation2D.hpp
        godot-cpp/include/gen/NavigationMesh.hpp
        godot-cpp/include/gen/NavigationMeshInstance.hpp
        godot-cpp/include/gen/NavigationPolygon.hpp
        godot-cpp/include/gen/NavigationPolygonInstance.hpp
        godot-cpp/include/gen/NetworkedMultiplayerENet.hpp
        godot-cpp/include/gen/NetworkedMultiplayerPeer.hpp
        godot-cpp/include/gen/NinePatchRect.hpp
        godot-cpp/include/gen/Node.hpp
        godot-cpp/include/gen/Node2D.hpp
        godot-cpp/include/gen/NoiseTexture.hpp
        godot-cpp/include/gen/Object.hpp
        godot-cpp/include/gen/OccluderPolygon2D.hpp
        godot-cpp/include/gen/OmniLight.hpp
        godot-cpp/include/gen/OpenSimplexNoise.hpp
        godot-cpp/include/gen/OptionButton.hpp
        godot-cpp/include/gen/OS.hpp
        godot-cpp/include/gen/PackedDataContainer.hpp
        godot-cpp/include/gen/PackedDataContainerRef.hpp
        godot-cpp/include/gen/PackedScene.hpp
        godot-cpp/include/gen/PacketPeer.hpp
        godot-cpp/include/gen/PacketPeerGDNative.hpp
        godot-cpp/include/gen/PacketPeerStream.hpp
        godot-cpp/include/gen/PacketPeerUDP.hpp
        godot-cpp/include/gen/Panel.hpp
        godot-cpp/include/gen/PanelContainer.hpp
        godot-cpp/include/gen/PanoramaSky.hpp
        godot-cpp/include/gen/ParallaxBackground.hpp
        godot-cpp/include/gen/ParallaxLayer.hpp
        godot-cpp/include/gen/Particles.hpp
        godot-cpp/include/gen/Particles2D.hpp
        godot-cpp/include/gen/ParticlesMaterial.hpp
        godot-cpp/include/gen/Path.hpp
        godot-cpp/include/gen/Path2D.hpp
        godot-cpp/include/gen/PathFollow.hpp
        godot-cpp/include/gen/PathFollow2D.hpp
        godot-cpp/include/gen/PCKPacker.hpp
        godot-cpp/include/gen/Performance.hpp
        godot-cpp/include/gen/PHashTranslation.hpp
        godot-cpp/include/gen/PhysicalBone.hpp
        godot-cpp/include/gen/Physics2DDirectBodyState.hpp
        godot-cpp/include/gen/Physics2DDirectBodyStateSW.hpp
        godot-cpp/include/gen/Physics2DDirectSpaceState.hpp
        godot-cpp/include/gen/Physics2DServer.hpp
        godot-cpp/include/gen/Physics2DServerSW.hpp
        godot-cpp/include/gen/Physics2DShapeQueryParameters.hpp
        godot-cpp/include/gen/Physics2DShapeQueryResult.hpp
        godot-cpp/include/gen/Physics2DTestMotionResult.hpp
        godot-cpp/include/gen/PhysicsBody.hpp
        godot-cpp/include/gen/PhysicsBody2D.hpp
        godot-cpp/include/gen/PhysicsDirectBodyState.hpp
        godot-cpp/include/gen/PhysicsDirectSpaceState.hpp
        godot-cpp/include/gen/PhysicsMaterial.hpp
        godot-cpp/include/gen/PhysicsServer.hpp
        godot-cpp/include/gen/PhysicsShapeQueryParameters.hpp
        godot-cpp/include/gen/PhysicsShapeQueryResult.hpp
        godot-cpp/include/gen/PinJoint.hpp
        godot-cpp/include/gen/PinJoint2D.hpp
        godot-cpp/include/gen/PlaneMesh.hpp
        godot-cpp/include/gen/PlaneShape.hpp
        godot-cpp/include/gen/PluginScript.hpp
        godot-cpp/include/gen/PointMesh.hpp
        godot-cpp/include/gen/Polygon2D.hpp
        godot-cpp/include/gen/PolygonPathFinder.hpp
        godot-cpp/include/gen/Popup.hpp
        godot-cpp/include/gen/PopupDialog.hpp
        godot-cpp/include/gen/PopupMenu.hpp
        godot-cpp/include/gen/PopupPanel.hpp
        godot-cpp/include/gen/Position2D.hpp
        godot-cpp/include/gen/Position3D.hpp
        godot-cpp/include/gen/PrimitiveMesh.hpp
        godot-cpp/include/gen/PrismMesh.hpp
        godot-cpp/include/gen/ProceduralSky.hpp
        godot-cpp/include/gen/ProgressBar.hpp
        godot-cpp/include/gen/ProjectSettings.hpp
        godot-cpp/include/gen/ProximityGroup.hpp
        godot-cpp/include/gen/ProxyTexture.hpp
        godot-cpp/include/gen/QuadMesh.hpp
        godot-cpp/include/gen/RandomNumberGenerator.hpp
        godot-cpp/include/gen/Range.hpp
        godot-cpp/include/gen/RayCast.hpp
        godot-cpp/include/gen/RayCast2D.hpp
        godot-cpp/include/gen/RayShape.hpp
        godot-cpp/include/gen/RayShape2D.hpp
        godot-cpp/include/gen/RectangleShape2D.hpp
        godot-cpp/include/gen/Reference.hpp
        godot-cpp/include/gen/ReferenceRect.hpp
        godot-cpp/include/gen/ReflectionProbe.hpp
        godot-cpp/include/gen/RegEx.hpp
        godot-cpp/include/gen/RegExMatch.hpp
        godot-cpp/include/gen/RemoteTransform.hpp
        godot-cpp/include/gen/RemoteTransform2D.hpp
        godot-cpp/include/gen/Resource.hpp
        godot-cpp/include/gen/ResourceFormatLoader.hpp
        godot-cpp/include/gen/ResourceFormatLoaderCrypto.hpp
        godot-cpp/include/gen/ResourceFormatSaver.hpp
        godot-cpp/include/gen/ResourceFormatSaverCrypto.hpp
        godot-cpp/include/gen/ResourceImporter.hpp
        godot-cpp/include/gen/ResourceInteractiveLoader.hpp
        godot-cpp/include/gen/ResourceLoader.hpp
        godot-cpp/include/gen/ResourcePreloader.hpp
        godot-cpp/include/gen/ResourceSaver.hpp
        godot-cpp/include/gen/RichTextEffect.hpp
        godot-cpp/include/gen/RichTextLabel.hpp
        godot-cpp/include/gen/RigidBody.hpp
        godot-cpp/include/gen/RigidBody2D.hpp
        godot-cpp/include/gen/RootMotionView.hpp
        godot-cpp/include/gen/SceneState.hpp
        godot-cpp/include/gen/SceneTree.hpp
        godot-cpp/include/gen/SceneTreeTimer.hpp
        godot-cpp/include/gen/Script.hpp
        godot-cpp/include/gen/ScriptCreateDialog.hpp
        godot-cpp/include/gen/ScriptEditor.hpp
        godot-cpp/include/gen/ScrollBar.hpp
        godot-cpp/include/gen/ScrollContainer.hpp
        godot-cpp/include/gen/SegmentShape2D.hpp
        godot-cpp/include/gen/Semaphore.hpp
        godot-cpp/include/gen/Separator.hpp
        godot-cpp/include/gen/Shader.hpp
        godot-cpp/include/gen/ShaderMaterial.hpp
        godot-cpp/include/gen/Shape.hpp
        godot-cpp/include/gen/Shape2D.hpp
        godot-cpp/include/gen/ShortCut.hpp
        godot-cpp/include/gen/Skeleton.hpp
        godot-cpp/include/gen/Skeleton2D.hpp
        godot-cpp/include/gen/SkeletonIK.hpp
        godot-cpp/include/gen/Skin.hpp
        godot-cpp/include/gen/SkinReference.hpp
        godot-cpp/include/gen/Sky.hpp
        godot-cpp/include/gen/Slider.hpp
        godot-cpp/include/gen/SliderJoint.hpp
        godot-cpp/include/gen/SoftBody.hpp
        godot-cpp/include/gen/Spatial.hpp
        godot-cpp/include/gen/SpatialGizmo.hpp
        godot-cpp/include/gen/SpatialMaterial.hpp
        godot-cpp/include/gen/SpatialVelocityTracker.hpp
        godot-cpp/include/gen/SphereMesh.hpp
        godot-cpp/include/gen/SphereShape.hpp
        godot-cpp/include/gen/SpinBox.hpp
        godot-cpp/include/gen/SplitContainer.hpp
        godot-cpp/include/gen/SpotLight.hpp
        godot-cpp/include/gen/SpringArm.hpp
        godot-cpp/include/gen/Sprite.hpp
        godot-cpp/include/gen/Sprite3D.hpp
        godot-cpp/include/gen/SpriteBase3D.hpp
        godot-cpp/include/gen/SpriteFrames.hpp
        godot-cpp/include/gen/StaticBody.hpp
        godot-cpp/include/gen/StaticBody2D.hpp
        godot-cpp/include/gen/StreamPeer.hpp
        godot-cpp/include/gen/StreamPeerBuffer.hpp
        godot-cpp/include/gen/StreamPeerGDNative.hpp
        godot-cpp/include/gen/StreamPeerSSL.hpp
        godot-cpp/include/gen/StreamPeerTCP.hpp
        godot-cpp/include/gen/StreamTexture.hpp
        godot-cpp/include/gen/StyleBox.hpp
        godot-cpp/include/gen/StyleBoxEmpty.hpp
        godot-cpp/include/gen/StyleBoxFlat.hpp
        godot-cpp/include/gen/StyleBoxLine.hpp
        godot-cpp/include/gen/StyleBoxTexture.hpp
        godot-cpp/include/gen/SurfaceTool.hpp
        godot-cpp/include/gen/TabContainer.hpp
        godot-cpp/include/gen/Tabs.hpp
        godot-cpp/include/gen/TCP_Server.hpp
        godot-cpp/include/gen/TextEdit.hpp
        godot-cpp/include/gen/TextFile.hpp
        godot-cpp/include/gen/Texture.hpp
        godot-cpp/include/gen/Texture3D.hpp
        godot-cpp/include/gen/TextureArray.hpp
        godot-cpp/include/gen/TextureButton.hpp
        godot-cpp/include/gen/TextureLayered.hpp
        godot-cpp/include/gen/TextureProgress.hpp
        godot-cpp/include/gen/TextureRect.hpp
        godot-cpp/include/gen/Theme.hpp
        godot-cpp/include/gen/Thread.hpp
        godot-cpp/include/gen/TileMap.hpp
        godot-cpp/include/gen/TileSet.hpp
        godot-cpp/include/gen/Timer.hpp
        godot-cpp/include/gen/ToolButton.hpp
        godot-cpp/include/gen/TouchScreenButton.hpp
        godot-cpp/include/gen/Translation.hpp
        godot-cpp/include/gen/TranslationServer.hpp
        godot-cpp/include/gen/Tree.hpp
        godot-cpp/include/gen/TreeItem.hpp
        godot-cpp/include/gen/TriangleMesh.hpp
        godot-cpp/include/gen/Tween.hpp
        godot-cpp/include/gen/UndoRedo.hpp
        godot-cpp/include/gen/UPNP.hpp
        godot-cpp/include/gen/UPNPDevice.hpp
        godot-cpp/include/gen/VBoxContainer.hpp
        godot-cpp/include/gen/VehicleBody.hpp
        godot-cpp/include/gen/VehicleWheel.hpp
        godot-cpp/include/gen/VideoPlayer.hpp
        godot-cpp/include/gen/VideoStream.hpp
        godot-cpp/include/gen/VideoStreamGDNative.hpp
        godot-cpp/include/gen/VideoStreamTheora.hpp
        godot-cpp/include/gen/VideoStreamWebm.hpp
        godot-cpp/include/gen/Viewport.hpp
        godot-cpp/include/gen/ViewportContainer.hpp
        godot-cpp/include/gen/ViewportTexture.hpp
        godot-cpp/include/gen/VisibilityEnabler.hpp
        godot-cpp/include/gen/VisibilityEnabler2D.hpp
        godot-cpp/include/gen/VisibilityNotifier.hpp
        godot-cpp/include/gen/VisibilityNotifier2D.hpp
        godot-cpp/include/gen/VisualInstance.hpp
        godot-cpp/include/gen/VisualScript.hpp
        godot-cpp/include/gen/VisualScriptBasicTypeConstant.hpp
        godot-cpp/include/gen/VisualScriptBuiltinFunc.hpp
        godot-cpp/include/gen/VisualScriptClassConstant.hpp
        godot-cpp/include/gen/VisualScriptComment.hpp
        godot-cpp/include/gen/VisualScriptComposeArray.hpp
        godot-cpp/include/gen/VisualScriptCondition.hpp
        godot-cpp/include/gen/VisualScriptConstant.hpp
        godot-cpp/include/gen/VisualScriptConstructor.hpp
        godot-cpp/include/gen/VisualScriptCustomNode.hpp
        godot-cpp/include/gen/VisualScriptDeconstruct.hpp
        godot-cpp/include/gen/VisualScriptEditor.hpp
        godot-cpp/include/gen/VisualScriptEmitSignal.hpp
        godot-cpp/include/gen/VisualScriptEngineSingleton.hpp
        godot-cpp/include/gen/VisualScriptExpression.hpp
        godot-cpp/include/gen/VisualScriptFunction.hpp
        godot-cpp/include/gen/VisualScriptFunctionCall.hpp
        godot-cpp/include/gen/VisualScriptFunctionState.hpp
        godot-cpp/include/gen/VisualScriptGlobalConstant.hpp
        godot-cpp/include/gen/VisualScriptIndexGet.hpp
        godot-cpp/include/gen/VisualScriptIndexSet.hpp
        godot-cpp/include/gen/VisualScriptInputAction.hpp
        godot-cpp/include/gen/VisualScriptIterator.hpp
        godot-cpp/include/gen/VisualScriptLists.hpp
        godot-cpp/include/gen/VisualScriptLocalVar.hpp
        godot-cpp/include/gen/VisualScriptLocalVarSet.hpp
        godot-cpp/include/gen/VisualScriptMathConstant.hpp
        godot-cpp/include/gen/VisualScriptNode.hpp
        godot-cpp/include/gen/VisualScriptOperator.hpp
        godot-cpp/include/gen/VisualScriptPreload.hpp
        godot-cpp/include/gen/VisualScriptPropertyGet.hpp
        godot-cpp/include/gen/VisualScriptPropertySet.hpp
        godot-cpp/include/gen/VisualScriptResourcePath.hpp
        godot-cpp/include/gen/VisualScriptReturn.hpp
        godot-cpp/include/gen/VisualScriptSceneNode.hpp
        godot-cpp/include/gen/VisualScriptSceneTree.hpp
        godot-cpp/include/gen/VisualScriptSelect.hpp
        godot-cpp/include/gen/VisualScriptSelf.hpp
        godot-cpp/include/gen/VisualScriptSequence.hpp
        godot-cpp/include/gen/VisualScriptSubCall.hpp
        godot-cpp/include/gen/VisualScriptSwitch.hpp
        godot-cpp/include/gen/VisualScriptTypeCast.hpp
        godot-cpp/include/gen/VisualScriptVariableGet.hpp
        godot-cpp/include/gen/VisualScriptVariableSet.hpp
        godot-cpp/include/gen/VisualScriptWhile.hpp
        godot-cpp/include/gen/VisualScriptYield.hpp
        godot-cpp/include/gen/VisualScriptYieldSignal.hpp
        godot-cpp/include/gen/VisualServer.hpp
        godot-cpp/include/gen/VisualShader.hpp
        godot-cpp/include/gen/VisualShaderNode.hpp
        godot-cpp/include/gen/VisualShaderNodeBooleanConstant.hpp
        godot-cpp/include/gen/VisualShaderNodeBooleanUniform.hpp
        godot-cpp/include/gen/VisualShaderNodeColorConstant.hpp
        godot-cpp/include/gen/VisualShaderNodeColorFunc.hpp
        godot-cpp/include/gen/VisualShaderNodeColorOp.hpp
        godot-cpp/include/gen/VisualShaderNodeColorUniform.hpp
        godot-cpp/include/gen/VisualShaderNodeCompare.hpp
        godot-cpp/include/gen/VisualShaderNodeCubeMap.hpp
        godot-cpp/include/gen/VisualShaderNodeCubeMapUniform.hpp
        godot-cpp/include/gen/VisualShaderNodeCustom.hpp
        godot-cpp/include/gen/VisualShaderNodeDeterminant.hpp
        godot-cpp/include/gen/VisualShaderNodeDotProduct.hpp
        godot-cpp/include/gen/VisualShaderNodeExpression.hpp
        godot-cpp/include/gen/VisualShaderNodeFaceForward.hpp
        godot-cpp/include/gen/VisualShaderNodeFresnel.hpp
        godot-cpp/include/gen/VisualShaderNodeGlobalExpression.hpp
        godot-cpp/include/gen/VisualShaderNodeGroupBase.hpp
        godot-cpp/include/gen/VisualShaderNodeIf.hpp
        godot-cpp/include/gen/VisualShaderNodeInput.hpp
        godot-cpp/include/gen/VisualShaderNodeIs.hpp
        godot-cpp/include/gen/VisualShaderNodeOuterProduct.hpp
        godot-cpp/include/gen/VisualShaderNodeOutput.hpp
        godot-cpp/include/gen/VisualShaderNodeScalarClamp.hpp
        godot-cpp/include/gen/VisualShaderNodeScalarConstant.hpp
        godot-cpp/include/gen/VisualShaderNodeScalarDerivativeFunc.hpp
        godot-cpp/include/gen/VisualShaderNodeScalarFunc.hpp
        godot-cpp/include/gen/VisualShaderNodeScalarInterp.hpp
        godot-cpp/include/gen/VisualShaderNodeScalarOp.hpp
        godot-cpp/include/gen/VisualShaderNodeScalarSmoothStep.hpp
        godot-cpp/include/gen/VisualShaderNodeScalarSwitch.hpp
        godot-cpp/include/gen/VisualShaderNodeScalarUniform.hpp
        godot-cpp/include/gen/VisualShaderNodeSwitch.hpp
        godot-cpp/include/gen/VisualShaderNodeTexture.hpp
        godot-cpp/include/gen/VisualShaderNodeTextureUniform.hpp
        godot-cpp/include/gen/VisualShaderNodeTextureUniformTriplanar.hpp
        godot-cpp/include/gen/VisualShaderNodeTransformCompose.hpp
        godot-cpp/include/gen/VisualShaderNodeTransformConstant.hpp
        godot-cpp/include/gen/VisualShaderNodeTransformDecompose.hpp
        godot-cpp/include/gen/VisualShaderNodeTransformFunc.hpp
        godot-cpp/include/gen/VisualShaderNodeTransformMult.hpp
        godot-cpp/include/gen/VisualShaderNodeTransformUniform.hpp
        godot-cpp/include/gen/VisualShaderNodeTransformVecMult.hpp
        godot-cpp/include/gen/VisualShaderNodeUniform.hpp
        godot-cpp/include/gen/VisualShaderNodeVec3Constant.hpp
        godot-cpp/include/gen/VisualShaderNodeVec3Uniform.hpp
        godot-cpp/include/gen/VisualShaderNodeVectorClamp.hpp
        godot-cpp/include/gen/VisualShaderNodeVectorCompose.hpp
        godot-cpp/include/gen/VisualShaderNodeVectorDecompose.hpp
        godot-cpp/include/gen/VisualShaderNodeVectorDerivativeFunc.hpp
        godot-cpp/include/gen/VisualShaderNodeVectorDistance.hpp
        godot-cpp/include/gen/VisualShaderNodeVectorFunc.hpp
        godot-cpp/include/gen/VisualShaderNodeVectorInterp.hpp
        godot-cpp/include/gen/VisualShaderNodeVectorLen.hpp
        godot-cpp/include/gen/VisualShaderNodeVectorOp.hpp
        godot-cpp/include/gen/VisualShaderNodeVectorRefract.hpp
        godot-cpp/include/gen/VisualShaderNodeVectorScalarMix.hpp
        godot-cpp/include/gen/VisualShaderNodeVectorScalarSmoothStep.hpp
        godot-cpp/include/gen/VisualShaderNodeVectorScalarStep.hpp
        godot-cpp/include/gen/VisualShaderNodeVectorSmoothStep.hpp
        godot-cpp/include/gen/VScrollBar.hpp
        godot-cpp/include/gen/VSeparator.hpp
        godot-cpp/include/gen/VSlider.hpp
        godot-cpp/include/gen/VSplitContainer.hpp
        godot-cpp/include/gen/WeakRef.hpp
        godot-cpp/include/gen/WebRTCDataChannel.hpp
        godot-cpp/include/gen/WebRTCDataChannelGDNative.hpp
        godot-cpp/include/gen/WebRTCMultiplayer.hpp
        godot-cpp/include/gen/WebRTCPeerConnection.hpp
        godot-cpp/include/gen/WebRTCPeerConnectionGDNative.hpp
        godot-cpp/include/gen/WebSocketClient.hpp
        godot-cpp/include/gen/WebSocketMultiplayerPeer.hpp
        godot-cpp/include/gen/WebSocketPeer.hpp
        godot-cpp/include/gen/WebSocketServer.hpp
        godot-cpp/include/gen/WindowDialog.hpp
        godot-cpp/include/gen/World.hpp
        godot-cpp/include/gen/World2D.hpp
        godot-cpp/include/gen/WorldEnvironment.hpp
        godot-cpp/include/gen/X509Certificate.hpp
        godot-cpp/include/gen/XMLParser.hpp
        godot-cpp/include/gen/YSort.hpp
        src/actors/NeutronRegion/ControlRod/ControlRod.cpp
        src/actors/NeutronRegion/ControlRod/ControlRod.h
        src/actors/HeatMap/DiffusingHeatMap.cpp
        src/actors/HeatMap/DiffusingHeatMap.h
        src/actors/NeutronRegion/FuelRod/FuelRod.cpp
        src/actors/NeutronRegion/FuelRod/FuelRod.h
        src/actors/HeatMap/HeatMap.cpp
        src/actors/HeatMap/HeatMap.h
        src/actors/NeutronRegion/Moderator/Moderator.cpp
        src/actors/NeutronRegion/Moderator/Moderator.h
        src/actors/NeutronField/Neutron.cpp
        src/actors/NeutronField/Neutron.h
        src/actors/NeutronField/NeutronField.cpp
        src/actors/NeutronField/NeutronField.h
        src/actors/NeutronRegion/NeutronRegion.cpp
        src/actors/NeutronRegion/NeutronRegion.h
        src/actors/NeutronRegion/ReactorCore/ReactorCore.cpp
        src/actors/NeutronRegion/ReactorCore/ReactorCore.h
        src/util/ThreadPool.h
        src/util/Utils.cpp
        src/util/Utils.h
        src/init.cpp src/actors/Sensors/Thermocouple/Thermocouple.cpp src/actors/Sensors/Thermocouple/Thermocouple.h)
